# code_scorer

./: README.md
client/: Cargo.toml  README.md  key.pem.pub
client/src/: client.rs
server/: README.md  go.mod  go.sum  main.go
server/db/: courses.go  db.go  enroll.go  folders.go  problem.go  select.go  start.sql  submit.go  tc.go  tc_list.go  user.go
server/libs/: add_course.go  add_user.go  addproblem.go  checker.go  commands.go  db_api.go  help.go  list.go  login.go  problem.go  reset.go  rsa.go  select.go  status.go  submit.go  tc.go  utils.go
